src/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>IsDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dt__c</fullName>
        <label>dt</label>
        <type>DateTime</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>